adding warning and success files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
-<h3>App component</h3>
-<app-servers></app-servers>
+<div class="container">
+    <div class="row">
+        <div class ="col-xs-12">
+            <h2>App component</h2>
+            <hr>
+            <app-servers></app-servers>
+            <app-warning></app-warning>
+            <app-success-alert></app-success-alert>    
+        </div>
+    </div>
+</div>
